@@ -18,7 +18,6 @@ int ATOMlen(int id, const void *v);
 str ATOMname(int id);
 ptr ATOMnil(int id);
 int ATOMprint(int id, const void *val, stream *fd);
-BAT *BATalpha(BAT *b);
 gdk_return BATappend(BAT *b, BAT *c, bit force);
 void BATassertProps(BAT *b);
 atomDesc BATatoms[];
@@ -107,7 +106,6 @@ BAT *BATconst(BAT *l, int tt, const void *val, int role);
 BAT *BATconstant(int tt, const void *val, BUN cnt, int role);
 BAT *BATconvert(BAT *b, BAT *s, int tp, int abort_on_error);
 BUN BATcount_no_nil(BAT *b);
-BAT *BATdelta(BAT *b);
 BAT *BATdense(oid hseq, oid tseq, BUN cnt) __attribute__((warn_unused_result));
 void BATderiveHeadProps(BAT *b, int expensive);
 void BATderiveProps(BAT *b, int expensive);
@@ -151,7 +149,6 @@ BAT *BATnew(int hdtype, int tltype, BUN capacity, int role) __attribute__((warn_
 int BATordered(BAT *b);
 int BATordered_rev(BAT *b);
 gdk_return BATouterjoin(BAT **r1p, BAT **r2p, BAT *l, BAT *r, BAT *sl, BAT *sr, int nil_matches, BUN estimate);
-BAT *BATprev(BAT *b);
 gdk_return BATprint(BAT *b);
 gdk_return BATprintcolumns(stream *s, int argc, BAT *argv[]);
 gdk_return BATprintf(stream *f, BAT *b);
