@@ -199,98 +199,3 @@ BATundo(BAT *b)
 	b->batFirst = b->batDeleted;
 	BATsetcount(b, b->batInserted);
 }
-
-/*
- * The proposed modifications can be obtained through the @%BATalpha@
- * and @%BATdelta@ routines , which return the inserted and deleted
- * BUNs, respectively.
- */
-BAT *
-BATprev(BAT *b)
-{
-	BUN p;
-	BAT *bn;
-	BATiter bi = bat_iterator(b);
-
-	BATcheck(b, "BATprev", NULL);
-	if (b->batRestricted == BAT_READ) {
-		bn = VIEWcreate(b->hseqbase, b);
-		if (bn) {
-			bn->batCount = bn->batInserted - bn->batDeleted;
-			bn->batInserted = bn->batFirst = bn->batDeleted;
-		}
-		return bn;
-	}
-	assert(BAThtype(b)== TYPE_void); // headless guard
-	bn = BATnew(TYPE_void, BATttype(b), BATcapacity(b), TRANSIENT);
-	if (bn == NULL) {
-		return bn;
-	}
-	for (p = b->batDeleted; p < b->batInserted; p++) {
-		if (BUNappend(bn, BUNtail(bi, p), FALSE) != GDK_SUCCEED) {
-			BBPreclaim(bn);
-			return NULL;
-		}
-	}
-	return bn;
-}
-
-BAT *
-BATalpha(BAT *b)
-{
-	BUN p;
-	BAT *bn;
-	BATiter bi = bat_iterator(b);
-
-	BATcheck(b, "BATalpha", NULL);
-	if (b->batRestricted == BAT_READ) {
-		bn = VIEWcreate(b->hseqbase, b);
-		if (bn) {
-			bn->batCount -= (bn->batInserted - bn->batFirst);
-			bn->batDeleted = bn->batFirst = bn->batInserted;
-		}
-		return bn;
-	}
-	assert(BAThtype(b) == TYPE_void); //headless guard
-	bn = BATnew(TYPE_void, BATttype(b), BATcapacity(b), TRANSIENT);
-	if (bn == NULL) {
-		return bn;
-	}
-	for (p = b->batInserted; p < BUNlast(b); p++) {
-		if (BUNappend(bn, BUNtail(bi, p), FALSE) != GDK_SUCCEED) {
-			BBPreclaim(bn);
-			return NULL;
-		}
-	}
-	return bn;
-}
-
-BAT *
-BATdelta(BAT *b)
-{
-	BUN p;
-	BAT *bn;
-	BATiter bi = bat_iterator(b);
-
-	BATcheck(b, "BATdelta", NULL);
-	if (b->batRestricted == BAT_READ) {
-		bn = VIEWcreate(b->hseqbase, b);
-		if (bn) {
-			bn->batCount = bn->batFirst - bn->batDeleted;
-			bn->batFirst = bn->batInserted = bn->batDeleted;
-		}
-		return bn;
-	}
-	assert(BAThtype(b)== TYPE_void);
-	bn = BATnew(TYPE_void, BATttype(b), BATcapacity(b), TRANSIENT);
-	if (bn == NULL) {
-		return bn;
-	}
-	for (p = b->batDeleted; p < b->batFirst; p++) {
-		if (BUNappend(bn, BUNtail(bi, p), FALSE) != GDK_SUCCEED) {
-			BBPreclaim(bn);
-			return NULL;
-		}
-	}
-	return bn;
-}
